# realtime-translator

./: .gitattributes  .gitignore  CLAUDE.md  INSTALL.md  README.md  build.bat  main.py  main.spec  package.bat  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: release.yml
config/: prompts.yaml  settings.yaml.example
core/: audio_capture.py  diarizer.py  pipeline.py  transcriber.py  translator.py  vad.py
installer/: install.bat  run.bat
ui/: llm_config.py  main_window.py  model_manager.py  stt_config.py
utils/: config.py  hallucination_log.py  model_manager.py  ring_buffer.py  silero_vad.py  stereo_mix.py  torch_setup.py  updater.py  version.py
